--- a/style.css
+++ b/style.css
@@ -119,9 +119,15 @@ footer {
 }
 
 .attribution {
-  font-size: 11px;
+  position: fixed;
+  width: 100%;
   text-align: center;
+  bottom: 5px;
+  transform: translate(-50%);
+  left: 50%;
+  margin: 0;
 }
+
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
@@ -135,12 +141,17 @@ footer {
     left: auto;
   }
 
-  footer {
+  #rates {
+    margin: 1px;
+    display: flex;
+  }
+
+  /* .attribution {
     position: fixed;
     width: auto;
     text-align: center;
     bottom: 2em;
-  }
+  } */
 }
 
 @media only screen and (min-width: 375px) and (max-width: 768px) {
